Fix info card spacing

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
 }
 
 .info {
-  padding: 0 15vw 100px 15vw;
+  padding: 0 25vw 100px 25vw;
 }
 
 .info-title {
